force-app/main/default/objects/PDRI__TestedField__c/PDRI__TestedField__c.object-meta.xml
<CustomObject>
    <label>Tested Field</label>
    <nameField>
        <displayFormat>TF-{0}</displayFormat>
        <label>Tested Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tested Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>