force-app/main/default/objects/PDRI__TestedField__c/fields/PDRI__FieldName__c.field-meta.xml
<CustomField>
    <fullName>PDRI__FieldName__c</fullName>
    <label>Field Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>