force-app/main/default/objects/PDRI__TestedField__c/fields/PDRI__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>PDRI__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>