force-app/main/default/objects/PDRI__TestedField__c/fields/PDRI__RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>PDRI__RelatedTo__c</fullName>
    <label>Related To</label>
    <length>90</length>
    <type>Text</type>
</CustomField>