force-app/main/default/objects/PDRI__TestedField__c/fields/PDRI__RelationshipName__c.field-meta.xml
<CustomField>
    <fullName>PDRI__RelationshipName__c</fullName>
    <label>Relationship Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>