force-app/main/default/objects/PDRI__TestedField__c/fields/PDRI__RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>PDRI__RelationshipType__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>