force-app/main/default/objects/PDRI__TestedField__c/fields/PDRI__TestTemplate__c.field-meta.xml
<CustomField>
    <fullName>PDRI__TestTemplate__c</fullName>
    <label>Test Template</label>
    <referenceTo>PDRI__TestTemplate__c</referenceTo>
    <relationshipLabel>Tested Fields</relationshipLabel>
    <relationshipName>TestedFields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>